--- a/css/styleTux.css
+++ b/css/styleTux.css
@@ -14,11 +14,16 @@ BODY{
 	background-position: 65% 15%;
 }
 
+img {
+	max-width: 100%;
+}
+
 img.rand {
   background-color: #eee;
   border-right: 2px solid black;
   border-bottom: 2px solid black;
   padding: 2em;
+	max-width: 100%;
 }
 
 table.index {
