--- a/css/styleTux.css
+++ b/css/styleTux.css
@@ -77,9 +77,9 @@ H1
         background:white;
         font-weight:bold;
 	margin-left:+6%;
-	font-size:25px;
-	line-height:27px;
-	text-align:center;
+	font-size:27px;
+	line-height:29px;
+	text-align:left;
 }
 
 H1.blau
